# Crossword-Space

./: .gitignore  README.md  baseline_model_bm25.py  baseline_model_lev.py  baseline_mpnet_c2c.py  baseline_mpnet_c2s.py  biencoder_train.py  crossword_utils.py  dataset_generator.py  pyproject.toml
crossword_space/: __init__.py  model.py
crossword_space/solver/: __init__.py  crossword.py  fill_algorithm.py  grid_generation.py  populate_grids.py  solver.py  solver_basic.py  timer.py  word_reader.py
data/crosswords_datasets/: test_cross_clues.json  test_crossword_results.json  test_gold_cross_clues.json  test_grids_empty.txt  test_grids_gold.txt  train_cross_clues.json  train_grids_empty.txt  train_grids_gold.txt  val_cross_clues.json  val_grids_empty.txt  val_grids_gold.txt
data/wordlists/: test_word_list.txt
datasets/: dict_test.csv  dict_val.csv
results/mpnet-base-dict/: results-crossword.json  results-dict.json  results-neo.json  results-onli.json
sample_preds/: indexes.json
sample_preds/c2c-BM25/: cross_preds.csv  dict_preds.csv  neo_preds.csv  onli_preds.csv
sample_preds/c2c-lev/: cross_preds.csv  dict_preds.csv  neo_preds.csv  onli_preds.csv
sample_preds/it5-base-dict/: cross_preds.csv  dict_preds.csv  neo_preds.csv  onli_preds.csv
sample_preds/mpnet-baseline-c2c/: cross_preds.csv  dict_preds.csv  neo_preds.csv  onli_preds.csv
sample_preds/paraphrase-multilingual-mpnet-base-v2-dict/: cross_preds.csv  dict_preds.csv  neo_preds.csv  onli_preds.csv
scripts/: embed_dataset.py  train.py
scripts/baselines/: baseline_bm25.py  baseline_levenshtein.py  (+2 more)
